Change Trigger of Github Actions

--- a/.github/workflows/commit-reviewer.yml
+++ b/.github/workflows/commit-reviewer.yml
@@ -1,5 +1,11 @@
-name: Pronto
-on: [pull_request_target]
+name: Avenger Bot
+on:
+  push:
+    branches:
+    - master
+  pull_request:
+    branches:
+    - master
 
 jobs:
   pronto:
