--- a/.github/workflows/commit-reviewer.yml
+++ b/.github/workflows/commit-reviewer.yml
@@ -47,3 +47,4 @@ jobs:
         env:
           PRONTO_PULL_REQUEST_ID: ${{ github.event.pull_request.number }}
           PRONTO_GITHUB_ACCESS_TOKEN: "${{ github.token }}"
+          GOODCHECK_HOME: "${{ github.workspace }}"
