--- a/goodcheck.yml
+++ b/goodcheck.yml
@@ -35,6 +35,11 @@ rules:
     glob:
       - "**/*"
 
+  - id: without_pattern
+    message: |
+      Read the operation manual for: https://example.com/guides/123
+    glob: webpack.config.js
+
 exclude:
   - node_modules
   - vendor
