--- a/.github/workflows/commit-reviewer.yml
+++ b/.github/workflows/commit-reviewer.yml
@@ -43,6 +43,7 @@ jobs:
       - name: Setup goodcheck
         run: |
           gem install specific_install
+          gem specific_install -l https://github.com/tabraiz12/pronto -b pronto-filecomment
           gem specific_install -l https://github.com/tabraiz12/pronto-goodcheck.git -b pronto-check-filecomment
       - name: Run Avenger Bot
         run: pronto run -f github_status github_pr -c origin/${{ github.base_ref }}
