--- a/.github/workflows/commit-reviewer.yml
+++ b/.github/workflows/commit-reviewer.yml
@@ -40,11 +40,12 @@ jobs:
           # Run `bundle install` with cache when `true`
           bundler-cache: true
 
-      - name: Setup goodcheck
+      - name: Setup goodcheck install
         run: |
           gem install specific_install
           gem specific_install -l https://github.com/tabraiz12/pronto -b pronto-filecomment
           gem specific_install -l https://github.com/tabraiz12/pronto-goodcheck.git -b pronto-check-filecomment
+          
       - name: Run Avenger Bot
         run: pronto run -f github_status github_pr -c origin/${{ github.base_ref }}
         env:
