--- a/package.json
+++ b/package.json
@@ -71,8 +71,7 @@
     "sprintf-js": "1.1.2",
     "vue": "3.2.0",
     "vue-custom-element": "3.2.14",
-    "vue3-datepicker": "^0.2.4",
-    "test": "123"
+    "vue3-datepicker": "^0.2.4"
   },
   "devDependencies": {
     "@babel/core": "7.14.3",
