--- a/.github/workflows/commit-reviewer.yml
+++ b/.github/workflows/commit-reviewer.yml
@@ -45,7 +45,7 @@ jobs:
           gem install specific_install
           gem specific_install -l https://github.com/tabraiz12/pronto -b pronto-filecomment
           gem specific_install -l https://github.com/tabraiz12/pronto-goodcheck.git -b pronto-check-filecomment
-          gem install pronto-eslint
+          gem install pronto-eslint_npm
       - name: Run Avenger Bot
         run: pronto run -f github_status github_pr -c origin/${{ github.base_ref }} -r eslint_npm goodcheck
         env:
