--- a/.github/workflows/commit-reviewer.yml
+++ b/.github/workflows/commit-reviewer.yml
@@ -47,6 +47,7 @@ jobs:
           gem specific_install -l https://github.com/tabraiz12/pronto-goodcheck.git -b pronto-check-filecomment
           gem install pronto-eslint_npm
           npm install eslint -g
+          npm install
           which eslint
       - name: Run Avenger Bot
         run: pronto run -f github_status github_pr -c origin/${{ github.base_ref }} -r eslint_npm goodcheck
